--- a/index.css
+++ b/index.css
@@ -4,15 +4,10 @@
 	padding: 0;
 	font-family: 'El Messiri', sans-serif;
 }
-.fakecontainer{
-	background-color: #00264D;
-	width: 100%;
-	height: 50px;
-}
 .backimg2{
 	width: 100%;
 	height: 100vh;
-	background-image: url('image4.jpg');
+	background-image: url('images/image3.jpg');
 	background-repeat: repeat-y;
 	background-size: 100% 100%;
 	background-attachment: fixed;
@@ -20,7 +15,7 @@
 .backimg3{
 	width: 100%;
 	height: 100vh;
-	background-image: url('image5.jpg');
+	background-image: url('images/image5.jpg');
 	background-repeat: repeat-y;
 	background-size: 100% 100%;
 	background-attachment: fixed;
@@ -102,6 +97,7 @@ a:hover{
 /*===========================================Home========================================================*/
 .mainHome{
 	background-color: #00264D;
+	padding: 0 50px;
 }
 .mainHome ol{	
 	color: #FF3300;
@@ -137,6 +133,7 @@ a:hover{
 /*===========================================About=======================================================*/
 .mainAbout{
 	background-color: #00264D;
+	padding: 50px;
 }
 .mainAbout h2{
 	padding: 15px;
@@ -157,6 +154,7 @@ a:hover{
 /*===========================================Objective===================================================*/
 .mainObjective{
 	background-color: #00264D;
+	padding: 50px;
 }
 .mainObjective h2{
 	padding: 15px;
@@ -177,6 +175,7 @@ a:hover{
 /*===========================================Events======================================================*/
 .mainEvents{
 	background-color: #00264D;
+	padding: 50px;
 }
 .mainEvents img:hover{
   	transform: scale(1.3);
@@ -222,6 +221,7 @@ a:hover{
 .mainFAQ{
 	background-color: #00264D;
 	background-attachment: fixed;
+	padding: 50px;
 }
 .FAQ{
 	width: 100%;
@@ -258,24 +258,15 @@ a:hover{
 
 /*===========================================Donate======================================================*/
 .mainDonate{
+	padding: 50px;
 	background-color: #00264D;
 }
 .Donate{
+	padding: 20px 0;
 	width: 100%;
 	height: 500px;
 	border: 2px solid #FF3300;
 	border-radius: 25px;
-	background-color: #00264D;
-}
-.Donate h2{
-	padding: 15px;
-	color: #FF3300; 
-}
-.carousel2design{
-	height: 100px;
-	margin-top: -150px;
-}
-.carousel2design p{
 	color: #FF3300;
 }
 /*===========================================Donate End==================================================*/
@@ -284,6 +275,7 @@ a:hover{
 /*===========================================Contact=====================================================*/
 .mainContact{	
 	background-color: #00264D;
+	padding: 50px;
 }
 .Contact{
 	background-color: #00264D;
