--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
 .backimg2{
 	width: 100%;
 	height: 100vh;
-	background-image: url('images/image3.jpg');
+	background-image: url('image3.jpg');
 	background-repeat: repeat-y;
 	background-size: 100% 100%;
 	background-attachment: fixed;
@@ -15,7 +15,7 @@
 .backimg3{
 	width: 100%;
 	height: 100vh;
-	background-image: url('images/image5.jpg');
+	background-image: url('image5.jpg');
 	background-repeat: repeat-y;
 	background-size: 100% 100%;
 	background-attachment: fixed;
